--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "fixed-decimal",
+  "name": "fixed-precision",
   "version": "1.0.0",
-  "description": "Precise fixed-scale decimal arithmetic for financial and exact calculations.",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "description": "A fixed-precision decimal arithmetic library for JavaScript/TypeScript",
+  "main": "dist/FixedPrecision.js",
+  "types": "dist/FixedPrecision.d.ts",
   "repository": {
     "type": "git",
-    "url": "https://github.com/naoeosavio/fixed-decimal.git"
+    "url": "https://github.com/naoeosavio/fixed-precision.git"
   },
   "keywords": [
     "fixed",
