--- a/package.json
+++ b/package.json
@@ -1,9 +1,25 @@
 {
   "name": "fixed-precision",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A fixed-precision decimal arithmetic library for JavaScript/TypeScript",
-  "main": "dist/FixedPrecision.js",
-  "types": "dist/FixedPrecision.d.ts",
+  "main": "dist/FixedPrecision",
+  "module": "dist/FixedPrecision.mjs",
+  "browser": "dist/FixedPrecision.js",
+  "exports": {
+    ".": {
+      "types": "./dist/FixedPrecision.d.ts",
+      "import": "./dist/FixedPrecision.mjs",
+      "require": "./dist/FixedPrecision.js"
+    },
+    "./dist/FixedPrecision.mjs": "./dist/FixedPrecision.mjs",
+    "./dist/FixedPrecision.js": "./dist/FixedPrecision.js",
+    "./package.json": "./package.json",
+    "./dist/FixedPrecision": {
+      "types": "./dist/FixedPrecision.d.ts",
+      "import": "./dist/FixedPrecision.mjs",
+      "require": "./dist/FixedPrecision.js"
+    }
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/naoeosavio/fixed-precision.git"
