--- a/package.json
+++ b/package.json
@@ -3,25 +3,17 @@
   "version": "1.0.2",
   "description": "A fixed-precision decimal arithmetic library for JavaScript/TypeScript",
   "main": "dist/FixedPrecision",
-  "module": "dist/FixedPrecision.mjs",
+  "type": "module",
   "browser": "dist/FixedPrecision.js",
+  "exports": {
+    "./package.json": "./package.json",
+    ".": {
+      "import": "./dist/FixedPrecision.js",
+      "default": "./dist/FixedPrecision.cjs"
+    }
+  },
   "bugs": {
     "url": "https://github.com/naoeosavio/fixed-precision/issues"
-  },
-  "exports": {
-    ".": {
-      "types": "./dist/FixedPrecision.d.ts",
-      "import": "./dist/FixedPrecision.mjs",
-      "require": "./dist/FixedPrecision.js"
-    },
-    "./dist/FixedPrecision.mjs": "./dist/FixedPrecision.mjs",
-    "./dist/FixedPrecision.js": "./dist/FixedPrecision.js",
-    "./package.json": "./package.json",
-    "./dist/FixedPrecision": {
-      "types": "./dist/FixedPrecision.d.ts",
-      "import": "./dist/FixedPrecision.mjs",
-      "require": "./dist/FixedPrecision.js"
-    }
   },
   "repository": {
     "type": "git",
@@ -39,18 +31,20 @@
   "author": "it is not savio",
   "license": "MIT",
   "scripts": {
-    "build": "tsc",
-    "test": "jest",
-    "lint": "eslint . --ext .ts",
-    "prepublish": "npm run build",
-    "test:watch": "jest --watch"
+    "build": "tsup",
+    "format": "prettier --write .",
+    "check-format": "prettier --check .",
+    "check-exports": "attw --pack . --ignore-rules=cjs-resolves-to-esm",
+    "lint": "tsc",
+    "test": "vitest run",
+    "dev": "vitest",
+    "ci": "npm run build && npm run check-format && npm run check-exports && npm run lint && npm run test",
+    "prepublish": "npm run ci"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.14",
-    "@typescript-eslint/eslint-plugin": "^8.24.0",
-    "@typescript-eslint/parser": "^8.24.0",
-    "eslint": "^8.57.1",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.2.5"
+    "@arethetypeswrong/cli": "^0.17.4",
+    "prettier": "^3.5.3",
+    "tsup": "^8.4.0",
+    "vitest": "^3.0.8"
   }
 }
