--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fixed-precision",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "A fixed-precision decimal arithmetic library for JavaScript/TypeScript",
   "main": "dist/FixedPrecision",
   "type": "module",
@@ -38,11 +38,13 @@
     "lint": "tsc",
     "test": "vitest run",
     "dev": "vitest",
+    "local-release": "changeset version && changeset publish",
     "ci": "npm run build && npm run check-format && npm run check-exports && npm run lint && npm run test",
     "prepublish": "npm run ci"
   },
   "devDependencies": {
     "@arethetypeswrong/cli": "^0.17.4",
+    "@changesets/cli": "^2.28.1",
     "prettier": "^3.5.3",
     "tsup": "^8.4.0",
     "vitest": "^3.0.8"
