--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "exports": {
     "./package.json": "./package.json",
     ".": {
+      "types": "./dist/FixedPrecision.d.ts",
       "import": "./dist/FixedPrecision.js",
       "default": "./dist/FixedPrecision.cjs"
     }
