--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
+    "target": "ES2020",
+    "moduleResolution": "Bundler",
     /* Base Options: */
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "target": "es2022",
-    "lib": ["es2022"],
     "allowJs": true,
     "resolveJsonModule": true,
     "moduleDetection": "force",
@@ -19,6 +19,6 @@
     "noEmit": true,
 
     /* If transpiling with TypeScript: */
-    "module": "Preserve"
+    "module": "ESNext"
   }
 }
