--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "fixed-precision",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "A fixed-precision decimal arithmetic library for JavaScript/TypeScript",
-  "main": "dist/FixedPrecision",
+  "main": "dist/FixedPrecision.js",
   "type": "module",
-  "browser": "dist/FixedPrecision.js",
+  "module": "dist/FixedPrecision.js",
   "exports": {
-    "./package.json": "./package.json",
     ".": {
       "import": "./dist/FixedPrecision.js",
       "require": "./dist/FixedPrecision.cjs"
-    }
+    },
+    "./package.json": "./package.json"
   },
   "bugs": {
     "url": "https://github.com/naoeosavio/fixed-precision/issues"
@@ -32,21 +32,19 @@
   "license": "MIT",
   "scripts": {
     "build": "tsup",
-    "format": "prettier --write .",
-    "check-format": "prettier --check .",
-    "check-exports": "attw --pack . --ignore-rules=cjs-resolves-to-esm",
     "lint": "tsc",
+    "format": "biome check --write src",
+    "check:format": "biome check src",
+    "check:exports": "attw --pack .",
     "test": "vitest run",
     "dev": "vitest",
-    "local-release": "changeset version && changeset publish",
-    "ci": "npm run build && npm run check-format && npm run check-exports && npm run lint && npm run test",
+    "ci": "npm run build && npm run check:format && npm run check:exports && npm run lint && npm run test",
     "prepublish": "npm run ci"
   },
   "devDependencies": {
     "@arethetypeswrong/cli": "^0.17.4",
-    "@changesets/cli": "^2.28.1",
-    "prettier": "^3.5.3",
     "tsup": "^8.5.0",
-    "vitest": "^3.0.8"
+    "vitest": "^3.0.8",
+    "@biomejs/biome": "2.2.6"
   }
 }
