--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "check:exports": "attw --pack .",
     "test": "vitest run",
     "dev": "vitest",
-    "ci": "npm run build && npm run check:format && npm run check:exports && npm run lint && npm run test",
+    "ci": "npm run lint && npm run check:format && npm run test && npm run build && npm run check:exports",
     "prepublish": "npm run ci"
   },
   "devDependencies": {
